@startuml Inheritance_and_Singleton

title 继承关系与单例模式

!theme plain

abstract class AbstractFlyingObject {
    # locationX: int
    # locationY: int
    # speedX: int
    # speedY: int
    # image: BufferedImage
    # width: int
    # height: int
    # isValid: boolean
    ---
    + AbstractFlyingObject(int, int, int, int)
    + forward(): void
    + crash(AbstractFlyingObject): boolean
    + setLocation(double, double): void
    + getLocationX(): int
    + getLocationY(): int
    + getSpeedY(): int
    + getImage(): BufferedImage
    + getWidth(): int
    + getHeight(): int
    + notValid(): boolean
    + vanish(): void
}

abstract class AbstractAircraft {
    # maxHp: int
    # hp: int
    # shootStrategy: Shootstrategy
    ---
    + AbstractAircraft(int, int, int, int, int)
    + decreaseHp(int): void
    + getHp(): int
    + setShootStrategy(Shootstrategy): void
    + {abstract} shoot(): List<BaseBullet>
    + {abstract} dropProp(): List<baseprop>
}

class HeroAircraft <<Singleton>> {
    - {static} instance: HeroAircraft
    - Hpmax: int
    ---
    - HeroAircraft(int, int, int, int, int)
    + {static} getInstance(int, int, int, int, int): HeroAircraft
    + forward(): void
    + shoot(): List<BaseBullet>
    + dropProp(): List<baseprop>
    + addHp(int): void
}

class MobEnemy {
    + MobEnemy(int, int, int, int, int)
    + forward(): void
    + shoot(): List<BaseBullet>
    + dropProp(): List<baseprop>
}

class EliteEnemy {
    - shootCycle: int
    - shootCounter: int
    - bulletPower: int
    ---
    + EliteEnemy(int, int, int, int, int)
    + forward(): void
    + shoot(): List<BaseBullet>
    + dropProp(): List<baseprop>
}

class ElitePlusEnemy {
    - shootCycle: int
    - shootCounter: int
    - bulletPower: int
    ---
    + ElitePlusEnemy(int, int, int, int, int)
    + forward(): void
    + shoot(): List<BaseBullet>
    + dropProp(): List<baseprop>
}

class AceEnemy {
    - shootCycle: int
    - shootCounter: int
    - bulletPower: int
    ---
    + AceEnemy(int, int, int, int, int)
    + forward(): void
    + shoot(): List<BaseBullet>
    + dropProp(): List<baseprop>
}

class BossEnemy {
    - shootCycle: int
    - shootCounter: int
    ---
    + BossEnemy(int, int, int, int, int)
    + forward(): void
    + shoot(): List<BaseBullet>
    + dropProp(): List<baseprop>
}

abstract class BaseBullet {
    # power: int
    ---
    + BaseBullet(int, int, int, int, int)
    + forward(): void
    + getPower(): int
}

class HeroBullet {
    + HeroBullet(int, int, int, int, int)
}

class EnemyBullet {
    + EnemyBullet(int, int, int, int, int)
}

abstract class baseprop {
    + baseprop(int, int, int, int)
    + forward(): void
    + {abstract} effect(): void
}

class BloodProp {
    - add: int
    ---
    + BloodProp(int, int, int, int)
    + effect(): void
}

class BombProp {
    + BombProp(int, int, int, int)
    + effect(): void
}

class FireProp {
    + FireProp(int, int, int, int)
    + effect(): void
}

class FireSuperProp {
    + FireSuperProp(int, int, int, int)
    + effect(): void
}

class FreezeProp {
    + FreezeProp(int, int, int, int)
    + effect(): void
}

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- baseprop

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- ElitePlusEnemy
AbstractAircraft <|-- AceEnemy
AbstractAircraft <|-- BossEnemy

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

baseprop <|-- BloodProp
baseprop <|-- BombProp
baseprop <|-- FireProp
baseprop <|-- FireSuperProp
baseprop <|-- FreezeProp

HeroAircraft --> HeroAircraft : 单例引用

@enduml